fix z-index of topbar

--- a/assets/sass/layouts/_navigation.scss
+++ b/assets/sass/layouts/_navigation.scss
@@ -22,7 +22,7 @@
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    z-index: zindex(lv5);
+    z-index: zindex(lv4);
     top: 80px;
     left: 30px;
     width: 380px;
