--- a/assets/sass/layouts/_topbar.scss
+++ b/assets/sass/layouts/_topbar.scss
@@ -19,7 +19,7 @@
     // >>>>>>>>>>>>>>>>>>>>>>>
     @include transition(transform 0.5s ease);
     position: fixed;
-    z-index: zindex(lv3);
+    z-index: zindex(lv5);
     top: 0;
     left: 0;
     width: 100%;
